--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "@affinio1/wdio-screenshot",
-  "version": "0.7.0",
+  "version": "0.7.2",
   "description": "Screenshot commands for WebdriverIO",
+  "publishConfig": {
+    "access": "public"
+  },
   "main": "lib/index.js",
   "files": [
     "*.md",
@@ -9,19 +12,15 @@
     "lib"
   ],
   "scripts": {
-    "clean-lib": "rimraf lib",
-    "clean-tmp": "rimraf .tmp",
-    "clean": "npm run clean-lib && npm run clean-tmp",
+    "clean": "rimraf lib",
     "build": "npm run clean && babel ./src -d lib",
-    "test": "npm run clean && mocha --compilers js:babel-register --timeout 15000 --recursive test/unit",
-    "test:local": "npm run clean && wdio ./test/wdio/wdio.local-conf.js",
-    "test:sauce": "npm run clean && wdio ./test/wdio/wdio.sauce-conf.js",
-    "test:appveyor": "npm run clean && wdio ./test/wdio/wdio.appveyor-conf.js",
-    "test:standalone": "npm run clean && npm run selenium-install && mocha --compilers js:babel-register --timeout 30000 --recursive test/standalone",
+    "test": "mocha --timeout 15000 --recursive test/unit",
+    "test:local": "wdio ./test/wdio/wdio.local-conf.js",
+    "test:sauce": "wdio ./test/wdio/wdio.sauce-conf.js",
+    "test:standalone": "npm run selenium-install && mocha --timeout 30000 --recursive test/standalone",
     "selenium-install": "selenium-standalone install",
     "server": "http-server test/fixture/web -p 3000",
     "deploy-integration-tests": "gh-pages -d test/fixture/web",
-    "prepublish": "npm run build",
     "release": "np"
   },
   "repository": {
