--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@affinio1/wdio-screenshot",
-  "version": "0.7.2",
+  "version": "0.7.3",
   "description": "Screenshot commands for WebdriverIO",
   "publishConfig": {
     "access": "public"
@@ -47,7 +47,10 @@
     "which": "^1.2.10"
   },
   "devDependencies": {
-    "babel-cli": "^6.9.0",
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/plugin-transform-runtime": "^7.15.8",
     "babel-plugin-lodash": "^3.2.9",
     "babel-plugin-syntax-async-functions": "^6.8.0",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
