--- a/.github/workflows/pub-npm.yaml
+++ b/.github/workflows/pub-npm.yaml
@@ -9,14 +9,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
+      - name: Set up Node.js 16
+        uses: actions/setup-node@v3
         with:
-          node-version: '18.0'
-          registry-url: 'https://registry.npmjs.org'
+          node-version: 16
+
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y python3 g++ make build-essential
+
+      - name: Use correct Python version
+        run: |
+          sudo ln -sf /usr/bin/python3 /usr/bin/python
 
       - name: Install dependencies
         run: npm install
